tests/snapshots/system_config_tests__config_tests_empty_config_body.snap
---
source: tests/system_config_tests.rs
expression: body
---
settings:
  default_output: verbose
  auto_update: true
steps: {}
workflows: {}
