tests/snapshots/system_config_tests__config_tests_empty_config_json.snap
---
source: tests/system_config_tests.rs
expression: parsed
---
{
  "settings": {
    "auto_update": true,
    "default_output": "verbose"
  },
  "steps": {},
  "workflows": {}
}
