tests/snapshots/system_config_tests__config_tests_env_block_yaml_body.snap
---
source: tests/system_config_tests.rs
expression: body
---
app_name: SecretConfig
settings:
  default_output: verbose
  auto_update: true
steps:
  deploy:
    command: git --version
    env:
      DB_PASSWORD: hunter2
      API_KEY: secret-key-123
workflows:
  default:
    steps:
    - deploy
