tests/snapshots/system_config_tests__config_tests_merged_adds_step.snap
---
source: tests/system_config_tests.rs
expression: parsed
---
{
  "app_name": "ConfigTest",
  "settings": {
    "auto_update": true,
    "defaults": {
      "output": "verbose"
    }
  },
  "steps": {
    "build": {
      "command": "rustc --version",
      "depends_on": [
        "deps"
      ],
      "title": "Build project"
    },
    "deps": {
      "command": "cargo --version",
      "title": "Install dependencies"
    },
    "local-step": {
      "command": "git --version"
    }
  },
  "workflows": {
    "default": {
      "steps": [
        "deps",
        "build"
      ]
    }
  }
}
