tests/snapshots/system_config_tests__config_tests_merged_json.snap
---
source: tests/system_config_tests.rs
expression: parsed
---
{
  "app_name": "ConfigTest",
  "settings": {
    "auto_update": true,
    "default_output": "verbose"
  },
  "steps": {
    "build": {
      "command": "rustc --version",
      "depends_on": [
        "deps"
      ],
      "title": "Build project"
    },
    "deps": {
      "command": "cargo --version",
      "title": "Install dependencies"
    }
  },
  "workflows": {
    "default": {
      "steps": [
        "deps",
        "build"
      ]
    }
  }
}
