tests/snapshots/system_config_tests__config_tests_merged_without_local.snap
---
source: tests/system_config_tests.rs
expression: body
---
app_name: ConfigTest
settings:
  defaults:
    output: verbose
  auto_update: true
steps:
  build:
    title: Build project
    command: rustc --version
    depends_on:
    - deps
  deps:
    title: Install dependencies
    command: cargo --version
workflows:
  default:
    steps:
    - deps
    - build
