tests/snapshots/system_config_tests__config_tests_minimal_yaml_body.snap
---
source: tests/system_config_tests.rs
expression: body
---
app_name: Minimal
settings:
  defaults:
    output: verbose
  auto_update: true
steps:
  one:
    command: git --version
workflows:
  default:
    steps:
    - one
